# rDNA-miner

./: .gitignore  README.md  environment.yml  pyproject.toml
src/rdna_miner/: cli.py  pipeline.py  workflow.py
src/rdna_miner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rdna_miner/steps/: annotate_rfam.py  assemble_rdna.py  barrnap_scan.py  cm_analyse.py  cmscan.py  compile_taxonomy.py  filter_rdna_reads.py  map_reads.py  plot_contigs.py  taxonomy_decipher.py
src/rdna_miner/steps/taxonomy_decipher/: run-decipher.R
src/rdna_miner/utils/: cmd.py  db.py  db_registry.py  fasta.py  logging_utils.py
src/rdna_miner/workflow/: context.py
